# bcc-rs

./: README
bashreadline/: Cargo.toml
bashreadline/src/: main.rs
bitehist/: Cargo.toml
bitehist/src/: bitehist.c  main.rs
memleak/: Cargo.toml
memleak/src/: main.rs
oomkill/: Cargo.toml
oomkill/src/: main.rs  oomkill.c
statsnoop/: Cargo.toml
statsnoop/src/: main.rs  statsnoop.c
strlen_count/: Cargo.toml
strlen_count/src/: main.rs  strlen_count.c
