[package]
name = "memleak"
version = "0.1.0"
authors = ["jbpratt78 <jbpratt78@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "0.0.17"
bcc-sys = "0.13.0"
ctrlc = { version = "3.0", features = ["termination"] }
anyhow = "1.0"
clap = "2.33.0"
page_size = "0.4.2"
